--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/compiler": "~7.2.8",
     "@angular/core": "~7.2.8",
     "@angular/forms": "~7.2.8",
+    "@angular/material": "^7.3.4",
+    "@angular/cdk": "7.3.4",
     "@angular/http": "~7.2.8",
     "@angular/platform-browser": "~7.2.8",
     "@angular/platform-browser-dynamic": "~7.2.8",
     "@angular/router": "~7.2.8",
+    "hammerjs": "2.0.8",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
